--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.15 || ^6.0.8"
+        "phpunit/phpunit": "^5.7.15 || ^6.0.8",
+        "spatie/temporary-directory": "^1.1",
+        "symfony/cache": "^3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
