--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     },
     "require": {
-        "php": ">=7.1"
+        "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.15 || ^6.0.8",
+        "phpunit/phpunit": "^5.7.15",
         "spatie/temporary-directory": "^1.1",
         "symfony/cache": "^3"
     },
